Rename files, move items in menus around * Move vehicle options into VehicleOptionsMenu file. * Make Lua tests use a namespace in MiscScripts.
* Add python scripts for scaping fivem vehicle name list, scraping fivem vehicle image list.
* Add python script for testing converting natives for use in lua.

* Add fivem_vehicle_display_names.json - This is a direct mapping of the vehicle hash names to their names in game.

* Somewhat update LuaManager, menu doesn't draw with this so it's still disabled.
* Update kctrainer-v.lua.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,18 @@
 # Built asis from my tests
 builds/
 
+# Downloaded vehicle images
+python/vehicle_images
+
+# Extra natives files, testing for LUA.
+python/converters/natives.h
+python/converters/GeneratedLuaNativeBindings.cpp
+python/converters/GeneratedNativeHashes.cpp
+
+KCTrainerV-menu/Components/LuaNatives.cpp
+KCTrainerV-menu/Components/LuaNatives.h
+KCTrainerV-menu/Components/GeneratedLuaNativeBindings.cpp
+
 # Pycharm
 .idea/
 
