--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/GTAV-Classes"]
 	path = thirdparty/GTAV-Classes
 	url = https://github.com/Mr-X-GTA/GTAV-Classes-1.git
+[submodule "thirdparty/tinyxml2"]
+	path = thirdparty/tinyxml2
+	url = https://github.com/leethomason/tinyxml2.git
