Update teleport menu with new category system * Now teleport system uses a separated category system. * Also, it will automatically populate the list with the vectors I have in TeleportLocations. * It adds the name, coordinates, and heading just like my vehicle spawner does.
* Update TeleportLocations with new teleport system.

* Label some more items in PlayerMenu.

PlayerScipts changes:
* Update SetWantedLevel code to be a bit more clear on what I am checking for.

Other script changes:
* Add IScriptBuilder.h, scripts that use a tick event should inherit this class.
* Updated PedScripts, TextScripts, VehicleScripts, WorldScripts to use new IScriptBuilder class.
* Add set peds on fire option in Menyoo test.
* Add teleport ini test to Script.cpp.
* Disable unknown weather type, doesn't do anything.

* Move some lua items into LuaTypes.h, add GPL license to LuaManager.cpp.

* Add test-teleports.ini, not in use so far but I will try to use it.

* Added new TeleportManager, will be using this for ini support later on.
* Update teleport code, add fade out and fade in options.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -293,6 +293,7 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Teleports\TeleportLocations.cpp" />
+    <ClCompile Include="Teleports\TeleportManager.cpp" />
     <ClCompile Include="Util\FileFunctions.cpp" />
     <ClCompile Include="Util\GTAmath.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
@@ -332,6 +333,7 @@
     <ClInclude Include="Components\LuaManager.h" />
     <ClInclude Include="Components\LuaNatives.h" />
     <ClInclude Include="Components\LuaScripts_old.h" />
+    <ClInclude Include="Components\LuaTypes.h" />
     <ClInclude Include="Constants.hpp" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="FeatureToggles.h" />
@@ -385,6 +387,7 @@
     <ClInclude Include="Scripts\Extras\MeteorShower.h" />
     <ClInclude Include="Scripts\Extras\WeaponIndivs.h" />
     <ClInclude Include="Scripts\Extras\World.h" />
+    <ClInclude Include="Scripts\IScriptBuilder.h" />
     <ClInclude Include="Scripts\MiscScripts.h" />
     <ClInclude Include="Scripts\NotificationManager.h" />
     <ClInclude Include="Scripts\PedModelManager.h" />
@@ -400,6 +403,7 @@
     <ClInclude Include="Scripts\WorldScripts.h" />
     <ClInclude Include="Teleports\TeleLocation.h" />
     <ClInclude Include="Teleports\TeleportLocations.h" />
+    <ClInclude Include="Teleports\TeleportManager.h" />
     <ClInclude Include="Util\EntityIterator.h" />
     <ClInclude Include="Util\Enums.h" />
     <ClInclude Include="Util\FileFunctions.h" />
@@ -411,6 +415,7 @@
     <ClInclude Include="Util\PoolSpawner.h" />
     <ClInclude Include="Util\Random.h" />
     <ClInclude Include="Util\StringManip.h" />
+    <ClInclude Include="Util\StringUtils.h" />
     <ClInclude Include="Util\UI.hpp" />
     <ClInclude Include="Util\Util.hpp" />
     <ClInclude Include="Util\Vehicle.h" />
