Updates to idgun
MiscScripts IDGun changes:
* Make idgun get list of ped models and object models from a json file.
* Update position of idgun and make it more aligned to the right of the minimap.

Script.cpp and Script.hpp changes:
* Add json loading to Script.cpp, add nlohmann json library.
* Add LoadModelNamesFromJson for loading the object and ped names from a json file.
*  Add g_modelNames map for storing a list of model names.

Other changes:
* Add nlohmann json library as a sub module.
* Add credits for json library in readme.
* Remove extras out of PlayerMenu.
* Add missing changes to KCMainMenu.
* Update text scripts to make the text centered to the left.

* Add DoorLockStates enum for door system.
* Add test in MiscMenu for locking/unlocking doors, so far it's incomplete.

* Add LOAD_MODEL_NAMES preprocessor.
* Add objects.json for a list of all object and ped hashes.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -91,7 +91,7 @@
       <PreprocessorDefinitions>WIN32_LEAN_AND_MEAN;NOMINMAX;NOGDI;DEBUG_MODE;KCTRAINER_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
-      <AdditionalIncludeDirectories>$(SolutionDir)thirdparty\ScriptHookV_SDK;$(SolutionDir)thirdparty;$(SolutionDir)thirdparty\GTAVMenuBase\;$(SolutionDir)thirdparty\sol\include;$(SolutionDir)thirdparty\tinyxml2;$(ProjectDir);$(ProjectDir)Scripts\Extras\Classes</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)thirdparty\ScriptHookV_SDK;$(SolutionDir)thirdparty;$(SolutionDir)thirdparty\GTAVMenuBase\;$(SolutionDir)thirdparty\sol\include;$(SolutionDir)thirdparty\tinyxml2;$(SolutionDir)thirdparty\json\single_include;$(ProjectDir);$(ProjectDir)Scripts\Extras\Classes</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -315,6 +315,8 @@
     <ClInclude Include="..\thirdparty\GTAVMenuBase\menusettings.h" />
     <ClInclude Include="..\thirdparty\GTAVMenuBase\menuutils.h" />
     <ClInclude Include="..\thirdparty\GTAVMenuBase\Scaleform.h" />
+    <ClInclude Include="..\thirdparty\json\single_include\nlohmann\json.hpp" />
+    <ClInclude Include="..\thirdparty\json\single_include\nlohmann\json_fwd.hpp" />
     <ClInclude Include="..\thirdparty\minhook\include\MinHook.h" />
     <ClInclude Include="..\thirdparty\minhook\src\buffer.h" />
     <ClInclude Include="..\thirdparty\minhook\src\hde\hde32.h" />
